--- a/Mystery Box/Podfile
+++ b/Mystery Box/Podfile
@@ -4,3 +4,4 @@ inhibit_all_warnings!
 pod 'Parse'
 pod 'AFNetworking'
 pod 'ACBInfoPanel', :git => 'git@github.com:TheAppCookbook/templates.git', :branch => 'master'
+pod 'TUSafariActivity'
